--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,9 @@ body{
 	width: 40%;
 	background: white;
 	margin: 0 auto;
-	padding: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    opacity: 0.99;
 }
 #chat_box{
 	width: 90%;
@@ -49,9 +51,11 @@ textarea{
 h1 {
   color: white;
   text-align: center;
+  font-family: verdana;
 }
 
 p {
   font-size: 20px;
   text-align: center;
+  font-family: verdana;
 }
